- Added carousel to the Experience Stream view, with cropped images to cover the full image span - Images in Experience view are also cropped to make sure that they cover the entire image span - Images in carousels are set to autopsy - In the Experience Stream View, when the dividers are used to filter experiences, the carousel is removed from DOM - The sliders set to a bit smaller dimension to make sure that the divs do not overlap in smaller screens

--- a/public/shadence/css/main.css
+++ b/public/shadence/css/main.css
@@ -1,4 +1,4 @@
-body, h1, h2, h3, h4, h5, h6, p, a, button, input {
+body, h1, h2, h3, h4, h5, h6, p, a, button, input, div, img {
 	font-family: 'Marcellus', "Helvetica Neue", Verdana, Helvetica, Arial, sans-serif;
 }
  
@@ -17,8 +17,8 @@ body, h1, h2, h3, h4, h5, h6, p, a, button, input {
 }
 
 .navbar-experiences {
-	font-size: 1.25em;
-	width: 250px;
+	font-size: 1.2em;
+	/*width: 250px;*/
 }
 
 .masonary-container {
@@ -115,6 +115,10 @@ body, h1, h2, h3, h4, h5, h6, p, a, button, input {
 	.affix {
 		position: static;
 	}
+	
+	.navbar-experiences {
+		width: 80%;
+	}
 }
 
 /*
@@ -144,4 +148,17 @@ body, h1, h2, h3, h4, h5, h6, p, a, button, input {
 
 .galleria-container {
 	z-index: 0;
+}
+
+.text-over-image {
+	background: black;
+	opacity: 0.75;
+	padding: 8px;
+	font-size: 24px;
+	position: absolute;
+	top: 20px;
+}
+
+.experiences-slider {
+	width: 95%;
 }
